@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c664a3d8e1dfa25b2194c15b5264a757a5aa3df781d7ad152784220f15811af0"
+  "signature": "sha256:0545d8858815704ef8fddb45bf589f46eedd97ec8e00f0e6baa11aa14082ad72"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,7 +32,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Sebastian Raschka 14/01/2015 \n",
+        "Sebastian Raschka 26/01/2015 \n",
         "\n",
         "CPython 3.4.2\n",
         "IPython 2.3.1\n",
@@ -176,14 +176,7 @@
        "text": [
         "5-fold cross validation:\n",
         "\n",
-        "Accuracy: 0.90 (+/- 0.05) [Logistic Regression]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "Accuracy: 0.90 (+/- 0.05) [Logistic Regression]\n",
         "Accuracy: 0.92 (+/- 0.05) [Random Forest]"
        ]
       },
@@ -281,18 +274,23 @@
       "\n",
       "class EnsembleClassifier(BaseEstimator, ClassifierMixin, TransformerMixin):\n",
       "    \"\"\" \n",
-      "    Ensemble classifier for scikit-learn estimators.\n",
+      "    Soft Voting/Majority Rule ensemble classifier for scikit-learn estimators.\n",
       "        \n",
       "    Parameters\n",
       "    ----------\n",
       "    clfs : array-like, shape = [n_classifiers]\n",
       "      A list of scikit-learn classifier objects.\n",
       "      \n",
+      "    voting : str, {'hard', 'soft'} (default='hard')\n",
+      "      If 'hard', uses predicted class labels for majority rule voting.\n",
+      "      Else if 'soft', predicts the class label based on the argmax of \n",
+      "      the sums of predict probalities.\n",
+      "    \n",
       "    weights : array-like, shape = [n_classifiers], optional (default=`None`)\n",
-      "      If `None`, the majority rule voting will be applied to the predicted \n",
-      "      class labels. If a list of weights (`float` or `int`) is provided, \n",
-      "      the averaged raw probabilities (via `predict_proba`) will be used to \n",
-      "      determine the most confident class label.\n",
+      "      Sequence of weights (`float` or `int`) that are multiplied with the \n",
+      "      predicted class probabilities before averaging if `voting='soft'` \n",
+      "      (weights are ignored if `voting='hard'`).\n",
+      "      Assumes equal weights if `None`.\n",
       "        \n",
       "    Attributes\n",
       "    ----------\n",
@@ -303,8 +301,18 @@
       "        Predicted probabilities by each classifier if `weights=array-like`.\n",
       "      \n",
       "    \"\"\"\n",
-      "    def __init__(self, clfs, weights=None):\n",
+      "    def __init__(self, clfs, voting='hard', weights=None):\n",
       "        self.clfs = clfs\n",
+      "        \n",
+      "        if voting not in ('soft', 'hard'):\n",
+      "            raise ValueError(\"voting must be 'soft' or 'hard'; got (voting=%r)\"\n",
+      "                             % voting)\n",
+      "\n",
+      "        self.voting = voting\n",
+      "        \n",
+      "        if weights and len(weights) != len(clfs):\n",
+      "            raise ValueError('Number of classifiers and weights must be equal')      \n",
+      "        \n",
       "        self.weights = weights\n",
       "\n",
       "    def fit(self, X, y):\n",
@@ -343,11 +351,11 @@
       "            Predicted class labels by majority rule.\n",
       "        \n",
       "        \"\"\"\n",
-      "        if self.weights:\n",
+      "        if self.voting == 'soft':\n",
       "            avg = self.predict_proba(X)\n",
       "            maj = np.apply_along_axis(lambda x: max(enumerate(x), key=operator.itemgetter(1))[0], axis=1, arr=avg)\n",
       "        \n",
-      "        else:\n",
+      "        else: # 'hard' voting\n",
       "            self.classes_ = self._get_classes(X)\n",
       "            maj = np.asarray([np.argmax(np.bincount(self.classes_[:,c])) for c in range(self.classes_.shape[1])]) \n",
       "        \n",
@@ -410,14 +418,60 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 81
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Majority Rule (hard) Voting\n",
+      "\n",
       "np.random.seed(123)\n",
-      "eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[1,1,1])\n",
+      "eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='hard')\n",
+      "\n",
+      "for clf, label in zip([clf1, clf2, clf3, eclf], ['Logistic Regression', 'Random Forest', 'naive Bayes', 'Ensemble']):\n",
+      "\n",
+      "    scores = cross_validation.cross_val_score(clf, X, y, cv=5, scoring='accuracy')\n",
+      "    print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), label))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Accuracy: 0.90 (+/- 0.05) [Logistic Regression]\n",
+        "Accuracy: 0.92 (+/- 0.05) [Random Forest]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Accuracy: 0.91 (+/- 0.04) [naive Bayes]\n",
+        "Accuracy: 0.95 (+/- 0.05) [Ensemble]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Average Probabilities (soft) Voting\n",
+      "\n",
+      "np.random.seed(123)\n",
+      "eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft', weights=[2,1,5])\n",
       "\n",
       "for clf, label in zip([clf1, clf2, clf3, eclf], ['Logistic Regression', 'Random Forest', 'naive Bayes', 'Ensemble']):\n",
       "\n",
@@ -442,7 +496,7 @@
        "text": [
         "\n",
         "Accuracy: 0.91 (+/- 0.04) [naive Bayes]\n",
-        "Accuracy: 0.95 (+/- 0.03) [Ensemble]"
+        "Accuracy: 0.94 (+/- 0.04) [Ensemble]"
        ]
       },
       {
@@ -453,7 +507,7 @@
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -514,9 +568,12 @@
       "\n",
       "To achieve this behavior, initialize the `EnsembleClassifier` like this: \n",
       "\n",
-      "    eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[1,1,1])\n",
+      "    eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft')\n",
       "\n",
-      "\n"
+      "Different weights can be provided explicitely via the `weights` parameter:\n",
+      "\n",
+      "\n",
+      "    eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft', weights=[10,1,2])"
      ]
     },
     {
@@ -584,7 +641,7 @@
       "            if len(set((w1,w2,w3))) == 1: # skip if all weights are equal\n",
       "                continue\n",
       "            \n",
-      "            eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[w1,w2,w3])\n",
+      "            eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft', weights=[w1,w2,w3])\n",
       "            scores = cross_validation.cross_val_score(\n",
       "                                            estimator=eclf,\n",
       "                                            X=X, \n",
@@ -814,7 +871,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 8,
        "text": [
         "    w1  w2  w3      mean       std\n",
         "2    1   2   1  0.953333  0.033993\n",
@@ -844,7 +901,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -899,7 +956,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -932,33 +989,7 @@
        ]
       }
      ],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "pipe1 = Pipeline([\n",
-      "               ('sel', ColumnSelector([1])), # use only the 1st feature\n",
-      "               ('clf', RandomForestClassifier())])\n",
-      "\n",
-      "pipe2 = Pipeline([\n",
-      "               ('sel', ColumnSelector([0, 1])), # use the 1st and 2nd feature\n",
-      "               ('dim', LDA(n_components=1)), # Dimensionality reduction via LDA\n",
-      "               ('clf', LogisticRegression())])\n",
-      "\n",
-      "pipe3 = Pipeline([\n",
-      "               ('eclf', EnsembleClassifier([pipe1, pipe2])),\n",
-      "])\n",
-      "parameters = {\n",
-      "'eclf__clfs__dim__n_components':(1,1),\n",
-      "}\n",
-      "grid_search = GridSearchCV(pipe3, parameters, n_jobs=-1, cv=5, verbose=5, refit=True, scoring=None)\n",
-      "grid_search.fit(X, y)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -994,11 +1025,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "eclf1 = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[5,2,1])\n",
-      "eclf2 = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[4,2,1])\n",
-      "eclf3 = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[1,2,4])\n",
+      "eclf1 = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft', weights=[5,2,1])\n",
+      "eclf2 = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft', weights=[4,2,1])\n",
+      "eclf3 = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft', weights=[1,2,4])\n",
       "\n",
-      "eclf = EnsembleClassifier(clfs=[eclf1, eclf2, eclf3], weights=[2,1,1])\n",
+      "eclf = EnsembleClassifier(clfs=[eclf1, eclf2, eclf3], voting='soft', weights=[2,1,1])\n",
       "\n",
       "scores = cross_validation.cross_val_score(eclf, X, y, cv=5, scoring='accuracy')\n",
       "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), label))"
@@ -1014,7 +1045,7 @@
        ]
       }
      ],
-     "prompt_number": 73
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -1068,7 +1099,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 11
     }
    ],
    "metadata": {}
