@@ -1,6 +1,42 @@
 # Sebastian Raschka 08/13/2014
 # mlxtend Machine Learning Library Extensions
 
+"""
+Soft Voting/Majority Rule classifier
+
+This module contains a Soft Voting/Majority Rule ensemble classifier for 
+scikit-learn classification estimators.
+
+## Examples:
+
+Intializing different scikit-learn estimators for classification
+>>> clf1 = LogisticRegression()
+>>> clf2 = RandomForestClassifier()
+>>> clf3 = GaussianNB()
+
+Example 1: Using Majority Class Label
+initialization for using the majority class labels for prediction
+>>> eclf = VotingClassifier(clfs=[clf1, clf2, clf3], voting='hard')
+>>> eclf.fit(X_train, y_train)
+>>> eclf.fit(X_test)
+
+Example 2: Using Average Probabilities
+initialization for using average predict_proba scores 
+to derive the class label.
+>>> eclf = VotingClassifier(clfs=[clf1, clf2, clf3], voting='soft')
+>>> eclf.fit(X_train, y_train)
+>>> eclf.fit(X_test)
+
+Example 3: Using Weighted Average Probabilities
+initialization for multiplying average predict_proba 
+scores to derive the class label.
+>>> eclf = VotingClassifier(clfs=[clf1, clf2, clf3], voting='soft', weights=[2,1,5])
+>>> eclf.fit(X_train, y_train)
+>>> eclf.fit(X_test)
+
+"""
+
+
 
 from sklearn.base import BaseEstimator
 from sklearn.base import ClassifierMixin
@@ -10,18 +46,23 @@ import operator
 
 class EnsembleClassifier(BaseEstimator, ClassifierMixin, TransformerMixin):
     """ 
-    Ensemble classifier for scikit-learn estimators.
+    Soft Voting/Majority Rule ensemble classifier for scikit-learn estimators.
         
     Parameters
     ----------
     clfs : array-like, shape = [n_classifiers]
       A list of scikit-learn classifier objects.
       
+    voting : str, {'hard', 'soft'} (default='hard')
+      If 'hard', uses predicted class labels for majority rule voting.
+      Else if 'soft', predicts the class label based on the argmax of 
+      the sums of predict probalities.
+    
     weights : array-like, shape = [n_classifiers], optional (default=`None`)
-      If `None`, the majority rule voting will be applied to the predicted 
-      class labels. If a list of weights (`float` or `int`) is provided, 
-      the averaged raw probabilities (via `predict_proba`) will be used to 
-      determine the most confident class label.
+      Sequence of weights (`float` or `int`) that are multiplied with the 
+      predicted class probabilities before averaging if `voting='soft'` 
+      (weights are ignored if `voting='hard'`).
+      Assumes equal weights if `None`.
         
     Attributes
     ----------
@@ -32,8 +73,18 @@ class EnsembleClassifier(BaseEstimator, ClassifierMixin, TransformerMixin):
         Predicted probabilities by each classifier if `weights=array-like`.
       
     """
-    def __init__(self, clfs, weights=None):
+    def __init__(self, clfs, voting='hard', weights=None):
         self.clfs = clfs
+        
+        if voting not in ('soft', 'hard'):
+            raise ValueError("voting must be 'soft' or 'hard'; got (voting=%r)"
+                             % voting)
+
+        self.voting = voting
+        
+        if weights and len(weights) != len(clfs):
+            raise ValueError('Number of classifiers and weights must be equal')      
+        
         self.weights = weights
 
     def fit(self, X, y):
@@ -72,11 +123,11 @@ class EnsembleClassifier(BaseEstimator, ClassifierMixin, TransformerMixin):
             Predicted class labels by majority rule.
         
         """
-        if self.weights:
+        if self.voting == 'soft':
             avg = self.predict_proba(X)
             maj = np.apply_along_axis(lambda x: max(enumerate(x), key=operator.itemgetter(1))[0], axis=1, arr=avg)
         
-        else:
+        else: # 'hard' voting
             self.classes_ = self._get_classes(X)
             maj = np.asarray([np.argmax(np.bincount(self.classes_[:,c])) for c in range(self.classes_.shape[1])]) 
         
