@@ -2,6 +2,7 @@
 =======
 
 - Added mlxtend.pandas.minmax_scaling - a function to rescale pandas DataFrame columns.
+- Slight update to the EnsembleClassifier interface (additional `voting` parameter)
 
 0.2.0
 =======
